manifest/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencart-db
  namespace: opencart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencart-db
  template:
    metadata:
      labels:
        app: opencart-db
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: opencart-db-pvc
