manifest/opencart-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencart
  namespace: opencart
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencart
  template:
    metadata:
      labels:
        app: opencart
    spec:
      containers:
      - name: opencart
        image: samirpandey65/opencart-nginx-working:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "200m"
            memory: "256Mi"
