manifest/opencart-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencart-nodeport
  namespace: opencart
spec:
  selector:
    app: opencart
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30080
  type: NodePort
