manifest/opencart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencart
  namespace: opencart
spec:
  selector:
    app: opencart
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
