manifest/opencart-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencart-ingress
  namespace: opencart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencart
            port:
              number: 80
